fix: scrollbar in chrome

--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -4,6 +4,7 @@
 
 body {
   font-family: Anta, Helvetica, sans-serif;
+  scrollbar-width: thin;
 }
 
 @layer base {
@@ -69,4 +70,16 @@ body {
   body {
     @apply bg-background text-foreground;
   }
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #0a4303;
 }
